cmake_minimum_required(VERSION 3.5)
project(labcodes)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    lab1/boot/asm.h
    lab1/boot/bootmain.c
    lab1/kern/debug/assert.h
    lab1/kern/debug/kdebug.c
    lab1/kern/debug/kdebug.h
    lab1/kern/debug/kmonitor.c
    lab1/kern/debug/kmonitor.h
    lab1/kern/debug/panic.c
    lab1/kern/debug/stab.h
    lab1/kern/driver/clock.c
    lab1/kern/driver/clock.h
    lab1/kern/driver/console.c
    lab1/kern/driver/console.h
    lab1/kern/driver/intr.c
    lab1/kern/driver/intr.h
    lab1/kern/driver/kbdreg.h
    lab1/kern/driver/picirq.c
    lab1/kern/driver/picirq.h
    lab1/kern/init/init.c
    lab1/kern/libs/readline.c
    lab1/kern/libs/stdio.c
    lab1/kern/mm/memlayout.h
    lab1/kern/mm/mmu.h
    lab1/kern/mm/pmm.c
    lab1/kern/mm/pmm.h
    lab1/kern/trap/trap.c
    lab1/kern/trap/trap.h
    lab1/libs/defs.h
    lab1/libs/elf.h
    lab1/libs/error.h
    lab1/libs/printfmt.c
    lab1/libs/stdarg.h
    lab1/libs/stdio.h
    lab1/libs/string.c
    lab1/libs/string.h
    lab1/libs/x86.h
    lab1/tools/sign.c
    lab1/tools/vector.c
    lab2/boot/asm.h
    lab2/boot/bootmain.c
    lab2/kern/debug/assert.h
    lab2/kern/debug/kdebug.c
    lab2/kern/debug/kdebug.h
    lab2/kern/debug/kmonitor.c
    lab2/kern/debug/kmonitor.h
    lab2/kern/debug/panic.c
    lab2/kern/debug/stab.h
    lab2/kern/driver/clock.c
    lab2/kern/driver/clock.h
    lab2/kern/driver/console.c
    lab2/kern/driver/console.h
    lab2/kern/driver/intr.c
    lab2/kern/driver/intr.h
    lab2/kern/driver/kbdreg.h
    lab2/kern/driver/picirq.c
    lab2/kern/driver/picirq.h
    lab2/kern/init/init.c
    lab2/kern/libs/readline.c
    lab2/kern/libs/stdio.c
    lab2/kern/mm/default_pmm.c
    lab2/kern/mm/default_pmm.h
    lab2/kern/mm/memlayout.h
    lab2/kern/mm/mmu.h
    lab2/kern/mm/pmm.c
    lab2/kern/mm/pmm.h
    lab2/kern/sync/sync.h
    lab2/kern/trap/trap.c
    lab2/kern/trap/trap.h
    lab2/libs/atomic.h
    lab2/libs/defs.h
    lab2/libs/elf.h
    lab2/libs/error.h
    lab2/libs/list.h
    lab2/libs/printfmt.c
    lab2/libs/stdarg.h
    lab2/libs/stdio.h
    lab2/libs/string.c
    lab2/libs/string.h
    lab2/libs/x86.h
    lab2/tools/sign.c
    lab2/tools/vector.c
    lab3/boot/asm.h
    lab3/boot/bootmain.c
    lab3/kern/debug/assert.h
    lab3/kern/debug/kdebug.c
    lab3/kern/debug/kdebug.h
    lab3/kern/debug/kmonitor.c
    lab3/kern/debug/kmonitor.h
    lab3/kern/debug/panic.c
    lab3/kern/debug/stab.h
    lab3/kern/driver/clock.c
    lab3/kern/driver/clock.h
    lab3/kern/driver/console.c
    lab3/kern/driver/console.h
    lab3/kern/driver/ide.c
    lab3/kern/driver/ide.h
    lab3/kern/driver/intr.c
    lab3/kern/driver/intr.h
    lab3/kern/driver/kbdreg.h
    lab3/kern/driver/picirq.c
    lab3/kern/driver/picirq.h
    lab3/kern/fs/fs.h
    lab3/kern/fs/swapfs.c
    lab3/kern/fs/swapfs.h
    lab3/kern/init/init.c
    lab3/kern/libs/readline.c
    lab3/kern/libs/stdio.c
    lab3/kern/mm/default_pmm.c
    lab3/kern/mm/default_pmm.h
    lab3/kern/mm/memlayout.h
    lab3/kern/mm/mmu.h
    lab3/kern/mm/pmm.c
    lab3/kern/mm/pmm.h
    lab3/kern/mm/swap.c
    lab3/kern/mm/swap.h
    lab3/kern/mm/swap_fifo.c
    lab3/kern/mm/swap_fifo.h
    lab3/kern/mm/vmm.c
    lab3/kern/mm/vmm.h
    lab3/kern/sync/sync.h
    lab3/kern/trap/trap.c
    lab3/kern/trap/trap.h
    lab3/libs/atomic.h
    lab3/libs/defs.h
    lab3/libs/elf.h
    lab3/libs/error.h
    lab3/libs/list.h
    lab3/libs/printfmt.c
    lab3/libs/rand.c
    lab3/libs/stdarg.h
    lab3/libs/stdio.h
    lab3/libs/stdlib.h
    lab3/libs/string.c
    lab3/libs/string.h
    lab3/libs/x86.h
    lab3/tools/sign.c
    lab3/tools/vector.c
    lab4/boot/asm.h
    lab4/boot/bootmain.c
    lab4/kern/debug/assert.h
    lab4/kern/debug/kdebug.c
    lab4/kern/debug/kdebug.h
    lab4/kern/debug/kmonitor.c
    lab4/kern/debug/kmonitor.h
    lab4/kern/debug/panic.c
    lab4/kern/debug/stab.h
    lab4/kern/driver/clock.c
    lab4/kern/driver/clock.h
    lab4/kern/driver/console.c
    lab4/kern/driver/console.h
    lab4/kern/driver/ide.c
    lab4/kern/driver/ide.h
    lab4/kern/driver/intr.c
    lab4/kern/driver/intr.h
    lab4/kern/driver/kbdreg.h
    lab4/kern/driver/picirq.c
    lab4/kern/driver/picirq.h
    lab4/kern/fs/fs.h
    lab4/kern/fs/swapfs.c
    lab4/kern/fs/swapfs.h
    lab4/kern/init/init.c
    lab4/kern/libs/readline.c
    lab4/kern/libs/stdio.c
    lab4/kern/mm/default_pmm.c
    lab4/kern/mm/default_pmm.h
    lab4/kern/mm/kmalloc.c
    lab4/kern/mm/kmalloc.h
    lab4/kern/mm/memlayout.h
    lab4/kern/mm/mmu.h
    lab4/kern/mm/pmm.c
    lab4/kern/mm/pmm.h
    lab4/kern/mm/swap.c
    lab4/kern/mm/swap.h
    lab4/kern/mm/swap_fifo.c
    lab4/kern/mm/swap_fifo.h
    lab4/kern/mm/vmm.c
    lab4/kern/mm/vmm.h
    lab4/kern/process/proc.c
    lab4/kern/process/proc.h
    lab4/kern/schedule/sched.c
    lab4/kern/schedule/sched.h
    lab4/kern/sync/sync.h
    lab4/kern/trap/trap.c
    lab4/kern/trap/trap.h
    lab4/libs/atomic.h
    lab4/libs/defs.h
    lab4/libs/elf.h
    lab4/libs/error.h
    lab4/libs/hash.c
    lab4/libs/list.h
    lab4/libs/printfmt.c
    lab4/libs/rand.c
    lab4/libs/stdarg.h
    lab4/libs/stdio.h
    lab4/libs/stdlib.h
    lab4/libs/string.c
    lab4/libs/string.h
    lab4/libs/x86.h
    lab4/tools/sign.c
    lab4/tools/vector.c
    lab5/boot/asm.h
    lab5/boot/bootmain.c
    lab5/kern/debug/assert.h
    lab5/kern/debug/kdebug.c
    lab5/kern/debug/kdebug.h
    lab5/kern/debug/kmonitor.c
    lab5/kern/debug/kmonitor.h
    lab5/kern/debug/panic.c
    lab5/kern/debug/stab.h
    lab5/kern/driver/clock.c
    lab5/kern/driver/clock.h
    lab5/kern/driver/console.c
    lab5/kern/driver/console.h
    lab5/kern/driver/ide.c
    lab5/kern/driver/ide.h
    lab5/kern/driver/intr.c
    lab5/kern/driver/intr.h
    lab5/kern/driver/kbdreg.h
    lab5/kern/driver/picirq.c
    lab5/kern/driver/picirq.h
    lab5/kern/fs/fs.h
    lab5/kern/fs/swapfs.c
    lab5/kern/fs/swapfs.h
    lab5/kern/init/init.c
    lab5/kern/libs/readline.c
    lab5/kern/libs/stdio.c
    lab5/kern/mm/default_pmm.c
    lab5/kern/mm/default_pmm.h
    lab5/kern/mm/kmalloc.c
    lab5/kern/mm/kmalloc.h
    lab5/kern/mm/memlayout.h
    lab5/kern/mm/mmu.h
    lab5/kern/mm/pmm.c
    lab5/kern/mm/pmm.h
    lab5/kern/mm/swap.c
    lab5/kern/mm/swap.h
    lab5/kern/mm/swap_fifo.c
    lab5/kern/mm/swap_fifo.h
    lab5/kern/mm/vmm.c
    lab5/kern/mm/vmm.h
    lab5/kern/process/proc.c
    lab5/kern/process/proc.h
    lab5/kern/schedule/sched.c
    lab5/kern/schedule/sched.h
    lab5/kern/sync/sync.h
    lab5/kern/syscall/syscall.c
    lab5/kern/syscall/syscall.h
    lab5/kern/trap/trap.c
    lab5/kern/trap/trap.h
    lab5/libs/atomic.h
    lab5/libs/defs.h
    lab5/libs/elf.h
    lab5/libs/error.h
    lab5/libs/hash.c
    lab5/libs/list.h
    lab5/libs/printfmt.c
    lab5/libs/rand.c
    lab5/libs/stdarg.h
    lab5/libs/stdio.h
    lab5/libs/stdlib.h
    lab5/libs/string.c
    lab5/libs/string.h
    lab5/libs/unistd.h
    lab5/libs/x86.h
    lab5/tools/sign.c
    lab5/tools/vector.c
    lab5/user/libs/panic.c
    lab5/user/libs/stdio.c
    lab5/user/libs/syscall.c
    lab5/user/libs/syscall.h
    lab5/user/libs/ulib.c
    lab5/user/libs/ulib.h
    lab5/user/libs/umain.c
    lab5/user/badarg.c
    lab5/user/badsegment.c
    lab5/user/divzero.c
    lab5/user/exit.c
    lab5/user/faultread.c
    lab5/user/faultreadkernel.c
    lab5/user/forktest.c
    lab5/user/forktree.c
    lab5/user/hello.c
    lab5/user/pgdir.c
    lab5/user/softint.c
    lab5/user/spin.c
    lab5/user/testbss.c
    lab5/user/waitkill.c
    lab5/user/yield.c
    lab6/boot/asm.h
    lab6/boot/bootmain.c
    lab6/kern/debug/assert.h
    lab6/kern/debug/kdebug.c
    lab6/kern/debug/kdebug.h
    lab6/kern/debug/kmonitor.c
    lab6/kern/debug/kmonitor.h
    lab6/kern/debug/panic.c
    lab6/kern/debug/stab.h
    lab6/kern/driver/clock.c
    lab6/kern/driver/clock.h
    lab6/kern/driver/console.c
    lab6/kern/driver/console.h
    lab6/kern/driver/ide.c
    lab6/kern/driver/ide.h
    lab6/kern/driver/intr.c
    lab6/kern/driver/intr.h
    lab6/kern/driver/kbdreg.h
    lab6/kern/driver/picirq.c
    lab6/kern/driver/picirq.h
    lab6/kern/fs/fs.h
    lab6/kern/fs/swapfs.c
    lab6/kern/fs/swapfs.h
    lab6/kern/init/init.c
    lab6/kern/libs/readline.c
    lab6/kern/libs/stdio.c
    lab6/kern/mm/default_pmm.c
    lab6/kern/mm/default_pmm.h
    lab6/kern/mm/kmalloc.c
    lab6/kern/mm/kmalloc.h
    lab6/kern/mm/memlayout.h
    lab6/kern/mm/mmu.h
    lab6/kern/mm/pmm.c
    lab6/kern/mm/pmm.h
    lab6/kern/mm/swap.c
    lab6/kern/mm/swap.h
    lab6/kern/mm/swap_fifo.c
    lab6/kern/mm/swap_fifo.h
    lab6/kern/mm/vmm.c
    lab6/kern/mm/vmm.h
    lab6/kern/process/proc.c
    lab6/kern/process/proc.h
    lab6/kern/schedule/default_sched.c
    lab6/kern/schedule/default_sched.h
    lab6/kern/schedule/sched.c
    lab6/kern/schedule/sched.h
    lab6/kern/sync/sync.h
    lab6/kern/syscall/syscall.c
    lab6/kern/syscall/syscall.h
    lab6/kern/trap/trap.c
    lab6/kern/trap/trap.h
    lab6/libs/atomic.h
    lab6/libs/defs.h
    lab6/libs/elf.h
    lab6/libs/error.h
    lab6/libs/hash.c
    lab6/libs/list.h
    lab6/libs/printfmt.c
    lab6/libs/rand.c
    lab6/libs/skew_heap.h
    lab6/libs/stdarg.h
    lab6/libs/stdio.h
    lab6/libs/stdlib.h
    lab6/libs/string.c
    lab6/libs/string.h
    lab6/libs/unistd.h
    lab6/libs/x86.h
    lab6/tools/sign.c
    lab6/tools/vector.c
    lab6/user/libs/panic.c
    lab6/user/libs/stdio.c
    lab6/user/libs/syscall.c
    lab6/user/libs/syscall.h
    lab6/user/libs/ulib.c
    lab6/user/libs/ulib.h
    lab6/user/libs/umain.c
    lab6/user/badarg.c
    lab6/user/badsegment.c
    lab6/user/divzero.c
    lab6/user/exit.c
    lab6/user/faultread.c
    lab6/user/faultreadkernel.c
    lab6/user/forktest.c
    lab6/user/forktree.c
    lab6/user/hello.c
    lab6/user/matrix.c
    lab6/user/pgdir.c
    lab6/user/priority.c
    lab6/user/softint.c
    lab6/user/spin.c
    lab6/user/testbss.c
    lab6/user/waitkill.c
    lab6/user/yield.c
    lab7/boot/asm.h
    lab7/boot/bootmain.c
    lab7/kern/debug/assert.h
    lab7/kern/debug/kdebug.c
    lab7/kern/debug/kdebug.h
    lab7/kern/debug/kmonitor.c
    lab7/kern/debug/kmonitor.h
    lab7/kern/debug/panic.c
    lab7/kern/debug/stab.h
    lab7/kern/driver/clock.c
    lab7/kern/driver/clock.h
    lab7/kern/driver/console.c
    lab7/kern/driver/console.h
    lab7/kern/driver/ide.c
    lab7/kern/driver/ide.h
    lab7/kern/driver/intr.c
    lab7/kern/driver/intr.h
    lab7/kern/driver/kbdreg.h
    lab7/kern/driver/picirq.c
    lab7/kern/driver/picirq.h
    lab7/kern/fs/fs.h
    lab7/kern/fs/swapfs.c
    lab7/kern/fs/swapfs.h
    lab7/kern/init/init.c
    lab7/kern/libs/readline.c
    lab7/kern/libs/stdio.c
    lab7/kern/mm/default_pmm.c
    lab7/kern/mm/default_pmm.h
    lab7/kern/mm/kmalloc.c
    lab7/kern/mm/kmalloc.h
    lab7/kern/mm/memlayout.h
    lab7/kern/mm/mmu.h
    lab7/kern/mm/pmm.c
    lab7/kern/mm/pmm.h
    lab7/kern/mm/swap.c
    lab7/kern/mm/swap.h
    lab7/kern/mm/swap_fifo.c
    lab7/kern/mm/swap_fifo.h
    lab7/kern/mm/vmm.c
    lab7/kern/mm/vmm.h
    lab7/kern/process/proc.c
    lab7/kern/process/proc.h
    lab7/kern/schedule/default_sched.c
    lab7/kern/schedule/default_sched.h
    lab7/kern/schedule/sched.c
    lab7/kern/schedule/sched.h
    lab7/kern/sync/check_sync.c
    lab7/kern/sync/monitor.c
    lab7/kern/sync/monitor.h
    lab7/kern/sync/sem.c
    lab7/kern/sync/sem.h
    lab7/kern/sync/sync.h
    lab7/kern/sync/wait.c
    lab7/kern/sync/wait.h
    lab7/kern/syscall/syscall.c
    lab7/kern/syscall/syscall.h
    lab7/kern/trap/trap.c
    lab7/kern/trap/trap.h
    lab7/libs/atomic.h
    lab7/libs/defs.h
    lab7/libs/elf.h
    lab7/libs/error.h
    lab7/libs/hash.c
    lab7/libs/list.h
    lab7/libs/printfmt.c
    lab7/libs/rand.c
    lab7/libs/skew_heap.h
    lab7/libs/stdarg.h
    lab7/libs/stdio.h
    lab7/libs/stdlib.h
    lab7/libs/string.c
    lab7/libs/string.h
    lab7/libs/unistd.h
    lab7/libs/x86.h
    lab7/tools/sign.c
    lab7/tools/vector.c
    lab7/user/libs/panic.c
    lab7/user/libs/stdio.c
    lab7/user/libs/syscall.c
    lab7/user/libs/syscall.h
    lab7/user/libs/ulib.c
    lab7/user/libs/ulib.h
    lab7/user/libs/umain.c
    lab7/user/badarg.c
    lab7/user/badsegment.c
    lab7/user/divzero.c
    lab7/user/exit.c
    lab7/user/faultread.c
    lab7/user/faultreadkernel.c
    lab7/user/forktest.c
    lab7/user/forktree.c
    lab7/user/hello.c
    lab7/user/matrix.c
    lab7/user/pgdir.c
    lab7/user/priority.c
    lab7/user/sleep.c
    lab7/user/sleepkill.c
    lab7/user/softint.c
    lab7/user/spin.c
    lab7/user/testbss.c
    lab7/user/waitkill.c
    lab7/user/yield.c
    lab8/boot/asm.h
    lab8/boot/bootmain.c
    lab8/kern/debug/assert.h
    lab8/kern/debug/kdebug.c
    lab8/kern/debug/kdebug.h
    lab8/kern/debug/kmonitor.c
    lab8/kern/debug/kmonitor.h
    lab8/kern/debug/panic.c
    lab8/kern/debug/stab.h
    lab8/kern/driver/clock.c
    lab8/kern/driver/clock.h
    lab8/kern/driver/console.c
    lab8/kern/driver/console.h
    lab8/kern/driver/ide.c
    lab8/kern/driver/ide.h
    lab8/kern/driver/intr.c
    lab8/kern/driver/intr.h
    lab8/kern/driver/kbdreg.h
    lab8/kern/driver/picirq.c
    lab8/kern/driver/picirq.h
    lab8/kern/fs/devs/dev.c
    lab8/kern/fs/devs/dev.h
    lab8/kern/fs/devs/dev_disk0.c
    lab8/kern/fs/devs/dev_stdin.c
    lab8/kern/fs/devs/dev_stdout.c
    lab8/kern/fs/sfs/bitmap.c
    lab8/kern/fs/sfs/bitmap.h
    lab8/kern/fs/sfs/sfs.c
    lab8/kern/fs/sfs/sfs.h
    lab8/kern/fs/sfs/sfs_fs.c
    lab8/kern/fs/sfs/sfs_inode.c
    lab8/kern/fs/sfs/sfs_io.c
    lab8/kern/fs/sfs/sfs_lock.c
    lab8/kern/fs/swap/swapfs.c
    lab8/kern/fs/swap/swapfs.h
    lab8/kern/fs/vfs/inode.c
    lab8/kern/fs/vfs/inode.h
    lab8/kern/fs/vfs/vfs.c
    lab8/kern/fs/vfs/vfs.h
    lab8/kern/fs/vfs/vfsdev.c
    lab8/kern/fs/vfs/vfsfile.c
    lab8/kern/fs/vfs/vfslookup.c
    lab8/kern/fs/vfs/vfspath.c
    lab8/kern/fs/file.c
    lab8/kern/fs/file.h
    lab8/kern/fs/fs.c
    lab8/kern/fs/fs.h
    lab8/kern/fs/iobuf.c
    lab8/kern/fs/iobuf.h
    lab8/kern/fs/sysfile.c
    lab8/kern/fs/sysfile.h
    lab8/kern/init/init.c
    lab8/kern/libs/readline.c
    lab8/kern/libs/stdio.c
    lab8/kern/libs/string.c
    lab8/kern/mm/default_pmm.c
    lab8/kern/mm/default_pmm.h
    lab8/kern/mm/kmalloc.c
    lab8/kern/mm/kmalloc.h
    lab8/kern/mm/memlayout.h
    lab8/kern/mm/mmu.h
    lab8/kern/mm/pmm.c
    lab8/kern/mm/pmm.h
    lab8/kern/mm/swap.c
    lab8/kern/mm/swap.h
    lab8/kern/mm/swap_fifo.c
    lab8/kern/mm/swap_fifo.h
    lab8/kern/mm/vmm.c
    lab8/kern/mm/vmm.h
    lab8/kern/process/proc.c
    lab8/kern/process/proc.h
    lab8/kern/schedule/default_sched.c
    lab8/kern/schedule/default_sched.h
    lab8/kern/schedule/sched.c
    lab8/kern/schedule/sched.h
    lab8/kern/sync/check_sync.c
    lab8/kern/sync/monitor.c
    lab8/kern/sync/monitor.h
    lab8/kern/sync/sem.c
    lab8/kern/sync/sem.h
    lab8/kern/sync/sync.h
    lab8/kern/sync/wait.c
    lab8/kern/sync/wait.h
    lab8/kern/syscall/syscall.c
    lab8/kern/syscall/syscall.h
    lab8/kern/trap/trap.c
    lab8/kern/trap/trap.h
    lab8/libs/atomic.h
    lab8/libs/defs.h
    lab8/libs/dirent.h
    lab8/libs/elf.h
    lab8/libs/error.h
    lab8/libs/hash.c
    lab8/libs/list.h
    lab8/libs/printfmt.c
    lab8/libs/rand.c
    lab8/libs/skew_heap.h
    lab8/libs/stat.h
    lab8/libs/stdarg.h
    lab8/libs/stdio.h
    lab8/libs/stdlib.h
    lab8/libs/string.c
    lab8/libs/string.h
    lab8/libs/unistd.h
    lab8/libs/x86.h
    lab8/tools/mksfs.c
    lab8/tools/sign.c
    lab8/tools/vector.c
    lab8/user/libs/dir.c
    lab8/user/libs/dir.h
    lab8/user/libs/file.c
    lab8/user/libs/file.h
    lab8/user/libs/lock.h
    lab8/user/libs/panic.c
    lab8/user/libs/stdio.c
    lab8/user/libs/syscall.c
    lab8/user/libs/syscall.h
    lab8/user/libs/ulib.c
    lab8/user/libs/ulib.h
    lab8/user/libs/umain.c
    lab8/user/badarg.c
    lab8/user/badsegment.c
    lab8/user/divzero.c
    lab8/user/exit.c
    lab8/user/faultread.c
    lab8/user/faultreadkernel.c
    lab8/user/forktest.c
    lab8/user/forktree.c
    lab8/user/hello.c
    lab8/user/ls.c
    lab8/user/matrix.c
    lab8/user/pgdir.c
    lab8/user/priority.c
    lab8/user/sh.c
    lab8/user/sleep.c
    lab8/user/sleepkill.c
    lab8/user/softint.c
    lab8/user/spin.c
    lab8/user/testbss.c
    lab8/user/waitkill.c
    lab8/user/yield.c)

add_executable(labcodes ${SOURCE_FILES})